Avoid flicker of categories in search results when load the page

--- a/AceSearch-portlet/docroot/css/portlet.css
+++ b/AceSearch-portlet/docroot/css/portlet.css
@@ -1,3 +1,9 @@
+.togglehide {
+	display:none;
+}
+.toggleshow {
+	display:inline;
+}
 .relevance-marker {
     position:relative;
     top:4px;
